--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-html, body{width: 100%; height: 100%; margin: 0;}
+html, body{margin: 0;width:100%;height:100%;}
 
 .container{
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
 	display: flex;
 	flex-direction: column-reverse;
 }
@@ -19,22 +19,32 @@ html, body{width: 100%; height: 100%; margin: 0;}
 	flex-direction: column;
 	padding: 30px;
 	border-radius: 5px;
-
 }
+
 .signature{
-
+	/*padding-top: 15px;
 	background-color: red;
-	position: relative;
-	margin-top: -10%; 
-
+	text-align: center;
+*/
+background-color: red;
+	width: 450px;
+    text-align: center;
+    display: block;
+    position: relative;
+    margin: auto;
+    font-size: 0.8em;
+    color: #fff;
+	
 }
+
+
 .quote{
+
 	background-color: white;
 	flex: 3 1 auto;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-
 }
 
 .author{
@@ -50,6 +60,7 @@ html, body{width: 100%; height: 100%; margin: 0;}
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+	padding-bottom:35px;
 }
 
 .bottom-left{
