Project completed, added signature and links

--- a/style.css
+++ b/style.css
@@ -17,26 +17,8 @@ html, body{margin: 0;width:100%;height:100%;}
 	transform: translate(-50%, -50%);
 	display: flex;
 	flex-direction: column;
-	padding: 30px;
 	border-radius: 5px;
 }
-
-.signature{
-	/*padding-top: 15px;
-	background-color: red;
-	text-align: center;
-*/
-background-color: red;
-	width: 450px;
-    text-align: center;
-    display: block;
-    position: relative;
-    margin: auto;
-    font-size: 0.8em;
-    color: #fff;
-	
-}
-
 
 .quote{
 
@@ -110,4 +92,15 @@ background-color: red;
 
 }
 
+.upper-box{
+	padding: 30px;
+	border-radius: 5px;
+}
+
+.lower-box{
+
+	color: white;
+	text-align: center;
+	margin: -1px;
+}
 
